fixing overlapping of categories and user welcome message

--- a/src/components/Categories/Categories.scss
+++ b/src/components/Categories/Categories.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   background-color: rgba(68, 67, 67, 0.8);
   width: 100vw;
-  margin-top: 0.5rem;
+  margin-top: 7rem;
 
   .cat_ul {
     display: flex;
